tests/error/enum_errors/enum_repeated_generic.err
Error: Duplicate type parameter (at $FILE:14:24)
   | 
12 | 
13 | @guppy.enum
14 | class MyEnum(Generic[X, X]):
   |                         ^ Type parameter `X` cannot be used multiple times

Guppy compilation failed due to 1 previous error
